--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="">Track Order</a></li>
         </ul>
     </div>
+
     <div class="navbar">
         <div class="navbar-logo">Bewakoof</div>
         <ul class="navbar-menu">
@@ -33,20 +34,14 @@
             <input type="text" placeholder="&#xf002; Search by product, category or collection" style="font-family: Arial, FontAwesome">
         </div>
         <div class="icons">
-            <!-- <span><i class="fas fa-search"></i></span> -->
-            <span><i class="fas fa-user"></i>Login</span>
+            <!-- <span><i class="fas fa-user"></i>Login</span> -->
+             <a href="">Login</a>
             <span><i class="fas fa-heart"></i></span>
             <span><i class="fas fa-shopping-cart"></i></span>
         </div>
     </div>
+
     <div class="heading">
-        <!-- <h3>Men</h3>
-        <h3>Women</h3>
-        <h3>Accessories</h3>
-        <h3>Sneakers</h3>
-        <h3>UP TO 70% OFF</h3>
-        <h3>Bwkf x Google</h3>
-        <h3>Bewakoof Air</h3> -->
         <ul>
             <li>Mens</li>
             <li>Women</li>
@@ -56,6 +51,74 @@
             <li>Bwkf x Google</li>
             <li>Bewakoof Air</li>
         </ul>
+    </div>
+
+    <!-- BODY START FROM HERE ---- -->
+     <div class="first">
+        <div class="a1"></div>
+        <div class="a2"></div>
+        <div class="a3"></div>
+     </div>
+
+     <div class="bill-board">
+     </div>
+
+     <div class="countdown">
+        <span id="time">01 : 08 : 22 : 56</span>
+    </div>
+
+    <!-- Shop by Category- Men -->
+     <div class="shop">
+        <h2>Shop by Category- Men</h2>
+        <div class="row1">
+            <div class="img1"></div>
+            <div class="img2"></div>
+            <div class="img3"></div>
+            <div class="img4"></div>
+            <div class="img5"></div>
+            <div class="img6"></div>
+        </div>
+        <div class="row2">
+            <div class="img7"></div>
+            <div class="img8"></div>
+            <div class="img9"></div>
+            <div class="img10"></div>
+            <div class="img11"></div>
+            <div class="img12"></div>
+        </div>
+     </div>
+
+     <!-- Shop by Category- Women -->
+     <div class="shop_women">
+        <h2>Shop by Category- Women</h2>
+        <div class="row1">
+            <div class="img1"></div>
+            <div class="img2"></div>
+            <div class="img3"></div>
+            <div class="img4"></div>
+            <div class="img5"></div>
+            <div class="img6"></div>
+        </div>
+        <div class="row2">
+            <div class="img7"></div>
+            <div class="img8"></div>
+            <div class="img9"></div>
+            <div class="img10"></div>
+            <div class="img11"></div>
+            <div class="img12"></div>
+        </div>
+     </div>
+
+     <!-- EFFORTLESSLY STYLISH BESTSELLERS -->
+    <div class="bestsellers">
+        <h2>EFFORTLESSLY STYLISH BESTSELLERS</h2>
+        <div class="img-bestsellers">
+            <div class="img_a1"></div>
+            <div class="img_a2"></div>
+            <div class="img_a3"></div>
+            <div class="img_a4"></div>
+            <div class="img_a5"></div>
+        </div>
     </div>
         
 </body>
