--- a/index.html
+++ b/index.html
@@ -111,14 +111,30 @@
 
      <!-- EFFORTLESSLY STYLISH BESTSELLERS -->
     <div class="bestsellers">
-        <h2>EFFORTLESSLY STYLISH BESTSELLERS</h2>
-        <div class="img-bestsellers">
+        <h2>TOO HOT TO BE MISSED</h2>
+        <div class="large_img">
             <div class="img_a1"></div>
             <div class="img_a2"></div>
             <div class="img_a3"></div>
+        </div>
+    </div>
+
+     <!-- OUR BEST PICK -->
+     <div class="bestpick">
+        <h2>OUR BEST PICK</h2>
+        <div class="large_img2">
             <div class="img_a4"></div>
             <div class="img_a5"></div>
+            <div class="img_a6"></div>
         </div>
+    </div>
+
+    <div class="lastBanner">
+        <div class="banner"></div>
+    </div>
+
+    <div class="footer">
+        <p>&copy; 2024 Your Company</p>
     </div>
         
 </body>
