--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div class="navbar">
         <div class="navbar-logo">Bewakoof</div>
         <ul class="navbar-menu">
-            <li>MEN</li>
-            <li>WOMEN</li>
+            <li><a href="Mens.html">MEN</a></li>
+            <li><a href="women.html">WOMEN</a></li>
             <li>MOBILE COVERS</li>
         </ul>
         <div class="search">
@@ -38,7 +38,7 @@
         </div>
         <div class="icons">
             <!-- <span><i class="fas fa-user"></i>Login</span> -->
-            <a href="">Login</a>
+            <a href="Login.html">Login</a>
             <span><i class="fas fa-heart"></i></span>
             <span><i class="fas fa-shopping-cart"></i></span>
         </div>
@@ -139,7 +139,6 @@
     <!-- ------------------------FOOTER START FROM HERE--------------------------------------------- -->
 
     <div class="footer">
-        <p class="logo1">&copy; 2024 Bewakoof®</p>
         <div id="inform-section">
             <div id="about-us">
                 <div>
@@ -418,82 +417,6 @@
                 buying decision. Give your wardrobe the much-needed upgrade with uber cool clothing head to Bewakoof.com
                 for a
                 great online shopping india experience now! Could you have asked for more?</p>
-            <h4>DONT MISS OUT ON ACCESSORIES AVAILABLE ON OUR MULTI-FACETED ONLINE STORE!</h4>
-            <p>We dont just offer you exciting options in online fashion but also give you amazing accessories with
-                really cool
-                bags and bag packs to choose from. Our bags and backpacks are compact, hassle-free and easy to stuff
-                things in.
-                And all of this with the swag that you get to carry along with it. Cool designs are what form a major
-                part of
-                our online fashion and we also ensure our accessories section doesnt feel left out!</p>
-            <h4>DONT MISS OUT ON ACCESSORIES AVAILABLE ON OUR MULTI-FACETED ONLINE STORE!</h4>
-            <p>We dont just offer you exciting options in online fashion but also give you amazing accessories with
-                really cool
-                bags and bag packs to choose from. Our bags and backpacks are compact, hassle-free and easy to stuff
-                things in.
-                And all of this with the swag that you get to carry along with it. Cool designs are what form a major
-                part of
-                our online fashion and we also ensure our accessories section doesnt feel left out!</p>
-            <h4>DESIGN OF THE DAY- THE COOLEST FEATURE EVER!</h4>
-            <p>Who said good and cool t-shirts have to expensive? We bring newer, cooler and more youth oriented designs
-                everyday. Yes! Everyday you get a new design to explore and buy. Although all our t-shirts are at an
-                extremely
-                affordable price, we decided to slash them down even further. But there is a catch. It is only for those
-                designs
-                and these exclusive prices are only valid for for a duration of 24 hours! Designs refresh every day at
-                3pm and
-                are valid only for 24 hours. So you need to hurry and grab one fast before it ends. Because we believe
-                everyone
-                needs to have a fair chance at all of our fresh designs of the day.</p>
-            <h4>BEWAKOOF.COM: THE UBER COOL ONLINE FASHION STORE FOR THE YOUTH</h4>
-            <p>We, at Bewakoof.com, have all that you need to glam up your cool quotient. From an extensive range of
-                plus size
-                clothing,<a href=""> casual shirts for men</a> and accessories for everyone, we purvey diversity of
-                choices in
-                online shopping india platform has to offer under one umbrella. The range of apparels like <a href="">
-                    men
-                    t-shirts</a>, joggers, sliders, Henley shirts, Polo t-shirts, Oxford pants and more provide an array
-                of
-                options for the online customer to create a ravishing ensemble from. We try to target all kinds of
-                customers and
-                cater to their needs and preferences. Communication is the key to our functioning. Your Bewakoof®Online
-                fashion
-                Shop has arrived! Do not miss the attractive online shopping offers everyday. Work your fashion with the
-                wide
-                range of apparels available only one click away! Make a statement with our best t-shirts online! Get
-                more, pay
-                less!
-
-            </p>
-            <h4>OUR PHILOSOPHY</h4>
-            <p>We believe in creating the kind of fashion, that makes you stand out as they are in line with the latest
-                local
-                and global trends of the industry, but also at the same time offer value for money functionality, with
-                quality
-                materials and comfortable and flattering prints. We try to look into the psyche of our customers, and
-                try to get
-                inspired by the conversations and experiences around us while creating our graphics, to ensure that they
-                are
-                relatable. We believe in constant and consistent innovation to ensure that our fans get nothing short of
-                the
-                bets at affordable rates! While most people do not know, we do not outsource the manufacturing of our
-                products,
-                everything from the conception of the designs to the manufacture and the styling that you see on the
-                photographs
-                of the banners and product pages of our website all happen in house! We go from yarn to product and
-                since we 're
-                vertically integrated and bring fashion from us directly to your doorstep without any middlemen that
-                also
-                further ensures reliability because for us it is not just about the money but about building the trust
-                and
-                credibility in our fans about our brand. We also make sure to decrease the impact on environment and are
-                building initiatives that will help us with the same, for now by optimizing our processes to use only as
-                much as
-                we need from nature, rain water harvesting and recycling the water from our RO water facility, because
-                we
-                believe that the spirit of Bewakoof®is about creating an impact by breaking conventions and having a
-                different
-                perspective!</p>
         </div>
     </div>
 </body>
