--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 style="font-family: Arial, FontAwesome">
         </div>
         <div class="icons">
-            <!-- <span><i class="fas fa-user"></i>Login</span> -->
             <a href="Login.html">Login</a>
+            <!-- <button class="profile"><i class="fa-duotone fa-user"></i></button> -->
             <span><i class="fas fa-heart"></i></span>
             <span><i class="fas fa-shopping-cart"></i></span>
         </div>
