--- a/PDetail.html
+++ b/PDetail.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Product Details</Details></Details></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="LoginMain.css">
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="PDetail.css">
 </head>
 <body>
     <div class="top_nav">
@@ -24,7 +24,7 @@
     </div>
 
     <div class="navbar">
-        <div class="navbar-logo">Bewakoof</div>
+        <div class="navbar-logo"><a href="index.html">Bewakoof</a></div>
         <ul class="navbar-menu">
             <li><a href="Mens.html">MEN</a></li>
             <li><a href="women.html">WOMEN</a></li>
@@ -39,22 +39,34 @@
             <span><i class="fas fa-shopping-cart"></i></span>
         </div>
     </div>
-    <!--------------------------------- Login ------------------------------------------------------>
-    <div class="login">
-        <div class="imgback">
-            <h1>Welcome to the world of Bewakoof®!</h1>
-            <div class="img"></div>
+
+    <!-- ---------------------------------Prodect Details  -------------------------------------->
+
+    <div class="product">
+        <div class="head">
+            <ul>
+                <li>Home</li>
+                <li>/</li>
+                <li>Men clothing </li>
+                <li>/</li>
+                <li>Men's T-Shirts </li>
+                <li>/</li>
+                <li>Men's Printed T-Shirts</li>
+                <li>/</li>
+                <li>Men's Black Storm Trooper Graphic Printed Oversized T-shirt</li>
+            </ul>
         </div>
-        <div class="info">
-            <h1><a href="index.html">Log in</a> / <a href="singup.html">Sing up</a></h1>
-            <p>for Latest trends, exciting offers and everything Bewakoof®!</p>
-            <div class="search2">
-                <input type="number" placeholder="ENTER YOUR NUMBER"></input>
+        <div class="detail">
+            <div class="dimg">
+                <div class="imgd1">1</div>
+                <div class="imgd2">2</div>
+                <div class="imgd3">3</div>
+                <div class="imgd4">4</div>
+                <div class="imgd5">5</div>
             </div>
-            <div class="continu">
-                <button>CONTINUE</button>
+            <div class="det">
             </div>
-            <hr>
+
         </div>
     </div>
 </body>
