--- a/SingUp.html
+++ b/SingUp.html
@@ -26,8 +26,8 @@
     <div class="navbar">
         <div class="navbar-logo">Bewakoof</div>
         <ul class="navbar-menu">
-            <li>MEN</li>
-            <li>WOMEN</li>
+            <li><a href="Mens.html">MEN</a></li>
+            <li><a href="women.html">WOMEN</a></li>
             <li>MOBILE COVERS</li>
         </ul>
         <div class="search">
