--- a/SingUp.html
+++ b/SingUp.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="navbar">
-        <div class="navbar-logo">Bewakoof</div>
+        <div class="navbar-logo"><a href="index.html">Bewakoof</a></div>
         <ul class="navbar-menu">
             <li><a href="Mens.html">MEN</a></li>
             <li><a href="women.html">WOMEN</a></li>
