--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="navbar">
-        <div class="navbar-logo">Bewakoof</div>
+        <div class="navbar-logo"><a href="Login.html">Bewakoof</a></div>
         <ul class="navbar-menu">
             <li><a href="Mens.html">MEN</a></li>
             <li><a href="women.html">WOMEN</a></li>
