--- a/index.html
+++ b/index.html
@@ -172,15 +172,17 @@
 
                     <div style="margin-top: 20px;">
                         <input type="text" placeholder="Enter your email address">
-                        <button
-                            style="width: 110px; height:42px; font-size: 16px; font-weight: 600; background-color: rgb(255 210 50); border-radius: 10px;">Subscribe</button>
+                        <button>Subscribe</button>
                     </div>
+
                     <div style="margin-top: 30px; display: flex; gap: 15px; margin-bottom: 5px;">
                         <p>4.7 People like this</p>
                     </div>
+
                     <div style=" display: flex; gap: 15px; margin-bottom: 5px;">
                         <p>1M Followers</p>
                     </div>
+
                 </div>
             </div>
 
