--- a/PDetail.html
+++ b/PDetail.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Details</Details></Details></title>
+    <title>Product Details</Details>
+        </Details>
+    </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="PDetail.css">
 </head>
+
 <body>
     <div class="top_nav">
         <ul class="top-menu">
@@ -58,16 +62,84 @@
         </div>
         <div class="detail">
             <div class="dimg">
-                <div class="imgd1">1</div>
-                <div class="imgd2">2</div>
-                <div class="imgd3">3</div>
-                <div class="imgd4">4</div>
-                <div class="imgd5">5</div>
+                <div class="imgd1"></div>
             </div>
             <div class="det">
+                <h2>OFFICIAL STAR WARS MERCHANDISE</h2>
+                <span>Men's Black Storm Trooper Graphic Printed Oversized <br> T-shirt</span>
+                <div class="rating">⭐4.5</div>
+                <div class="price">₹699<span class="original-price">₹1,449</span><span class="discount">51% OFF</span>
+                </div>
+                <div class="taxes">inclusive of all taxes</div>
+                <div class="notification">62 people bought this in the last 7 days</div>
+                <div class="features">
+                    <div class="oversized">OVERSIZED FIT</div>
+                    <div class="cotton">100% COTTON</div>
+                </div>
+                <div class="offer">Tribe members get an extra discount of ₹60 and FREE shipping. Learn more.</div>
+                <div class="size-selector">
+                    <button class="size-button">S (9 left)</button>
+                    <button class="size-button">M</button>
+                    <button class="size-button">L</button>
+                    <button class="size-button">XL</button>
+                    <button class="size-button">2XL (3 left)</button>
+                    <button class="size-button">3XL (5 left)</button>
+                </div>
+                <div class="add-to-bag-btn">ADD TO BAG</div>
+                <div class="wishlist-btn">WISHLIST</div>
             </div>
 
         </div>
     </div>
+
+    <!-------------------------------------------- Footer ---------------------------------------->
+    <div class="footer">
+        <div id="inform-section">
+            <div id="about-us">
+                <div>
+                    <span>About Bwakoof</span>
+                    <ul>
+                        <li>Who are we?</li>
+                        <li>Terms & Conditions</li>
+                        <li>Privacy Policy</li>
+                    </ul>
+                </div>
+                <div>
+                    <span>Customer Service</span>
+                    <ul>
+                        <li>Contact us</li>
+                        <li>Track order</li>
+                        <li>Return order</li>
+                    </ul>
+                </div>
+                <div>
+                    <span>Quick Links</span>
+                    <ul>
+                        <li>Offers</li>
+                        <li>Fanbook</li>
+
+                    </ul>
+                </div>
+            </div>
+            <div id="updates">
+                <div>
+                    <span>Get updates on your inbox</span>
+
+                    <div style="margin-top: 20px;">
+                        <input type="text" placeholder="Enter your email address">
+                        <button
+                            style="width: 110px; height:42px; font-size: 16px; font-weight: 600; background-color: rgb(255 210 50); border-radius: 10px;">Subscribe</button>
+                    </div>
+                    <div style="margin-top: 30px; display: flex; gap: 15px; margin-bottom: 5px;">
+                        <p>4.7 People like this</p>
+                    </div>
+                    <div style=" display: flex; gap: 15px; margin-bottom: 5px;">
+                        <p>1M Followers</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
